# FWDD

./: .gitignore  LICENSE  README.md  coherence_profile_tutorial.ipynb  environment.yml  filter_function_tutorial.ipynb  noise_learning_fitting.py  noise_learning_fitting.sbatch  noise_learning_fitting_tutorial.ipynb  noise_tutorial.ipynb  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
conda.recipe/: meta.yaml
data/: example_XY8data_normtotpi1.json
fwdd/: __init__.py  coherence_profile.py  filter_function.py  fitting_utils.py  noise_learning_fitting.py  noise_spectra.py
fwdd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
machine_learning/: README.md  train_model.py  train_model.sbatch  train_model_n_128_tau_p_0.024.py  train_model_n_128_tau_p_0.024.sbatch  train_model_n_2048_tau_p_0.024.py  train_model_n_2048_tau_p_0.024.sbatch  train_small_model_n_128_tau_p_0.024.py  train_small_model_n_128_tau_p_0.024.sbatch  train_small_model_n_128_tau_p_0.024_dense.py  train_small_model_n_128_tau_p_0.024_dense.sbatch  train_small_model_n_128_tau_p_0.024_no_maxpool.py  train_small_model_n_128_tau_p_0.024_no_maxpool.sbatch  train_small_model_n_2048_tau_p_0.024.py  train_small_model_n_2048_tau_p_0.024.sbatch
package/: coherence_profile.py  filter_function.py  fitting_utils.py  noise_learning_fitting.py  noise_spectra.py
tests/: test_coherence_profile.py  test_filter_function.py  test_fitting_utils.py  test_noise_learning_fitting.py  test_noise_spectra.py
(+33 files in other folders)
