[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwdd"
version = "0.1.0"
description = "Finite Width Dynamical Decoupling (FWDD) implements Dynamical Decoupling considering the effects of Finite Pulse Widths."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Noah Huffman", email = "nonohuff@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numba>=0.55.0",
    "scikit-learn>=1.0.0",
    "scikit-optimize>=0.9.0",
    "tqdm>=4.60.0",
    "joblib>=1.1.0",
    "psutil>=5.8.0",
]

[project.urls]
Homepage = "https://github.com/nonohuff/FWDD/tree/main"
Repository = "https://github.com/nonohuff/FWDD/tree/main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fwdd*"]
